feat: add dorm power query and various improvements
- Add dorm power electricity query endpoints (balance, daily, monthly, hourly)
- Add DormPowerService with external API integration
- Update admin, auth, comment, message, post, profile modules
- Add new DTOs and error handling improvements

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>